# botfaqs

./: .gitignore  Dockerfile  README.md  db.sqlite3-shm  db.sqlite3-wal  docker_readme.md  privacy.md  pyproject.toml  tos.md
.github/workflows/: deploy.yml
src/: bot.py  dataandtraining.ipynb  db.sqlite3-shm  db.sqlite3-wal  faqorm.py  settings.toml  setupdb.py
tests/: data.csv  test.csv
